--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,28 @@
 	"name": "git-reset",
 	"short_name": "R-UI",
 	"description": "Restore github to the old UI, by switching the repositories and dashboard",
+	"browser_action": {
+          "default_icon": {
+            "16": "icons/16.png",
+            "32": "icons/32.png",
+						"48": "icons/48.png",
+						"64": "icons/64.png",
+			      "128": "icons/128.png",
+						"1024": "icons/1024.png"
+          },
+          "default_title": "git-reset",
+					"default_popup": "popup.html"
+        },
   "icons": {
       "16": "icons/16.png",
       "32": "icons/32.png",
       "48": "icons/48.png",
 			"64": "icons/64.png",
       "128": "icons/128.png",
-			"128": "icons/1024.png"
+			"1024": "icons/1024.png"
     },
 	"manifest_version": 2,
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"author": "Aditya Arora",
 	"content_scripts": [{
 		"matches": ["https://github.com/","https://github.com/dashboard/discover"],
