--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
 	"version": "1.0.0",
 	"author": "Aditya Arora",
 	"content_scripts": [{
-		"matches": ["https://github.com/","https://github.com/dashboard/discover"],
+		"matches": ["*://github.com/*"],
 		"js": ["main.js"],
 		"run_at": "document_end",
 		"all_frames": true
